[project]

name        = "basichll"
version     = "0.2.2"
authors     = ["kjgorman <kieran@kjgorman.com>"]
description = "The basic HyperLogLog algorithm"
homepage    = "https://github.com/kjgorman/hll.rs"
repository  = "https://github.com/kjgorman/hll.rs"
license     = "MIT"
keywords    = ["hyperloglog", "hll"]

[lib]
name = "basichll"
path = "src/lib.rs"

[dependencies]
byteorder = "0.3.11"
